--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Faker==37.12.0
 idna==3.11
 inflection==0.5.1
 iniconfig==2.3.0
+oauthlib==3.3.1
 packaging==25.0
 pluggy==1.6.0
 psycopg2-binary==2.9.11
@@ -31,6 +32,7 @@ pytz==2025.2
 PyYAML==6.0.3
 redis==7.0.1
 requests==2.32.5
+requests-oauthlib==2.0.0
 sqlparse==0.5.3
 tzdata==2025.2
 uritemplate==4.2.0
